--- a/src/AutoMapper.ObjectInitializer.UnitTests/AutoMapper.ObjectInitializer.UnitTests.csproj
+++ b/src/AutoMapper.ObjectInitializer.UnitTests/AutoMapper.ObjectInitializer.UnitTests.csproj
@@ -65,7 +65,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="MappingExpressionExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
